@@ -1,3 +1,9 @@
+2006-09-07 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: parse /proc/partitions to find devices instead
+	  of using ped_device_probe_all()
+
 2006-09-06 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* configure.in: finally added a decent check for libparted (see also
